Complete homepage update

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4258,13 +4258,13 @@ a.ads1 img {
 button.button {
 	display: inline-block;
 	border: 0;
-	background: #1267b3;
+	background: #333333;
 	padding: 8px 16px;
-	border: 2px solid #1267b3;
+	border: 2px solid #333333;
 	font-weight: 600;
 	text-align: center;
 	white-space: nowrap;
-	color: #333333;
+	color: #1267b3;
 	transition: all 0.3s linear;
 	-moz-transition: all 0.3s linear;
 	-webkit-transition: all 0.3s linear;
@@ -4274,8 +4274,8 @@ button.button {
 	text-transform: uppercase;
 }
 button.button:hover {
-	background: #333333;
-	border: 2px solid #333333;
+	background: #1267b3;
+	border: 2px solid #1267b3;
 	transition: all 0.3s linear;
 	-moz-transition: all 0.3s linear;
 	-webkit-transition: all 0.3s linear;
@@ -7900,4 +7900,10 @@ to {
 	color: #ffffff; 
 	font-size: 14px; 
 	font-weight: bold;
+}
+.hadassahbg{
+	background-image: rgba(224, 90, 138, 0.49);
+	background-repeat: no-repeat;
+	background-size: 2220px 1800px;
+	
 }
