--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7894,7 +7894,7 @@ to {
 	width: 1200px;
 }
 .mmPushBody .fa-align-justify:before {
-	content: "f00d";
+	content: "\f039";
 }
 .fontwhite {
 	color: #ffffff; 
