--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2780,12 +2780,12 @@ a.totop:hover {
 	color: #666
 }
 footer h3 {
-	border-bottom: 1px #eee solid;
+	border-bottom: 1px #fff solid;
 }
 }
 footer {
 	overflow: hidden;
-	background: #f5f5f5;
+	background: #040404;
 	margin-top: 8px;
 }
 footer h3 {
@@ -2801,6 +2801,7 @@ footer .social h3 {
 	padding: 0px;
 	letter-spacing: 1px;
 	text-transform: uppercase;
+	color: white;
 }
 footer .footer-links ul {
 	margin: 0px;
@@ -2837,7 +2838,7 @@ footer .footer-links ul li a:hover {
 }
 .email .fa-envelope:before {
 	font-size: 13px;
-	color: #666;
+	color: #fff;
 	height: 35px;
 	width: 35px;
 	line-height: 32px;
@@ -2932,6 +2933,7 @@ footer .footer-links ul li a:hover {
 	border-radius: 4px
 }
 .footer-content p {
+	color: white;
 }
 }
 @media (min-width:480px) and (max-width:1023px) {
@@ -2941,7 +2943,7 @@ footer .footer-links ul li a:hover {
 }
 .footer-newsletter .email {
 	text-transform: none;
-	float: left
+	float: center
 }
 button.subscribe:before {
 	content: "\f0e0";
@@ -7906,4 +7908,7 @@ to {
 	background-repeat: no-repeat;
 	background-size: 2220px 1800px;
 	
+}
+.colorwhite{
+	color: white;
 }
