--- a/assets/version4/css/style.css
+++ b/assets/version4/css/style.css
@@ -5656,7 +5656,7 @@ p.note {
 	margin-bottom: 30px;
 }
 .cart-collaterals .col2-set {
-	float: left;
+	float: center;
 	margin: 0;
 	padding: 0;
 }
