--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,7 +84,7 @@ body {
 	font-size: 13px;
 	font-weight: 400;
 	line-height: 20px;
-	text-align: center;
+	text-align: left;
 	letter-spacing: 0.8px;
 }
 /* Poppins font*/
