--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -484,7 +484,7 @@ input:focus {
 }
 .main-container {
 	min-height: 350px;
-	padding: 25px 0 0px;
+	padding: 60;
 }
 /******************************************
 4. Header
